fix images overlapping issue

--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -2,8 +2,7 @@
 
 .container {
   display: grid;
-  grid-template-columns: 100px auto;
-  grid-template-rows: 50px 50px 200px;
+  grid-template-columns: 1fr 2fr 1fr;
   grid-gap: 3px;
 }
 
